--- a/py-lambda-dynamodb/.gitignore
+++ b/py-lambda-dynamodb/.gitignore
@@ -1,9 +1,12 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
 # dependencies
 /node_modules
-node_modules
-yarn.lock
 
 # testing
 /coverage
@@ -11,18 +14,15 @@ yarn.lock
 # production
 /build
 
-# typescript
-*.js
-*.d.ts
-
 # misc
 .DS_Store
 
 # sst build output
 .build
 
+# environments
+.env*.local
+
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-lambda_env
